@@ -1,3 +1,6 @@
 Makefile.in
 Makefile
 .deps
+.libs
+*.lo
+*.la
