@@ -1,5 +1,8 @@
 #! /bin/sh
 
+echo "NOTE: this script is obsolete.  Use autoreconf instead!"
+echo Running libtoolize...
+libtoolize --automake
 echo Running aclocal...
 aclocal
 echo Running autoheader...
