@@ -1,3 +1,11 @@
+2004-06-03  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* Build shared library as well as static (using libtool)
+
+	* Change FUSE_MINOR_VERSION from 1 to 0.  I know it's illegal but
+	there has not been a release with the previous minor number, and I
+	hope nobody is using it for anything.
+	
 2004-05-18  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* Added flush() call
